--- a/draft-ietf-regext-change-poll.html
+++ b/draft-ietf-regext-change-poll.html
@@ -379,6 +379,7 @@
 <link href="#rfc.section.2" rel="Chapter" title="2 Object Attributes"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Operation"/>
 <link href="#rfc.section.2.2" rel="Chapter" title="2.2 Who"/>
+<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Dates and Times"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 EPP Command Mapping"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 EPP Query Commands"/>
 <link href="#rfc.section.3.1.1" rel="Chapter" title="3.1.1 EPP &lt;check&gt; Command"/>
@@ -414,6 +415,7 @@
 <link href="#rfc.appendix.A.8" rel="Chapter" title="A.8 Change from REGEXT 01 to REGEXT 02"/>
 <link href="#rfc.appendix.A.9" rel="Chapter" title="A.9 Change from REGEXT 02 to REGEXT 03"/>
 <link href="#rfc.appendix.A.10" rel="Chapter" title="A.10 Change from REGEXT 03 to REGEXT 04"/>
+<link href="#rfc.appendix.A.11" rel="Chapter" title="A.11 Change from REGEXT 04 to REGEXT 05"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -421,8 +423,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Gould, J. and K. Feher" />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-04" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-10-18" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-05" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-12-13" />
   <meta name="dct.abstract" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client sponsored objects that were not initiated by the client through EPP. These operations MAY include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
   <meta name="description" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client sponsored objects that were not initiated by the client through EPP. These operations MAY include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
 
@@ -446,12 +448,12 @@
   <td class="right">K. Feher</td>
 </tr>
 <tr>
-  <td class="left">Expires: April 21, 2018</td>
+  <td class="left">Expires: June 16, 2018</td>
   <td class="right">Neustar</td>
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">October 18, 2017</td>
+  <td class="right">December 13, 2017</td>
 </tr>
 
     	
@@ -459,7 +461,7 @@
   </table>
 
   <p class="title">Change Poll Extension for the Extensible Provisioning Protocol (EPP)<br />
-  <span class="filename">draft-ietf-regext-change-poll-04</span></p>
+  <span class="filename">draft-ietf-regext-change-poll-05</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -471,7 +473,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on April 21, 2018.</p>
+<p>This Internet-Draft will expire on June 16, 2018.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -488,6 +490,7 @@
 </ul><li>2.   <a href="#rfc.section.2">Object Attributes</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Operation</a></li>
 <li>2.2.   <a href="#rfc.section.2.2">Who</a></li>
+<li>2.3.   <a href="#rfc.section.2.3">Dates and Times</a></li>
 </ul><li>3.   <a href="#rfc.section.3">EPP Command Mapping</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">EPP Query Commands</a></li>
 <ul><li>3.1.1.   <a href="#rfc.section.3.1.1">EPP &lt;check&gt; Command</a></li>
@@ -523,13 +526,14 @@
 <li>A.8.   <a href="#rfc.appendix.A.8">Change from REGEXT 01 to REGEXT 02</a></li>
 <li>A.9.   <a href="#rfc.appendix.A.9">Change from REGEXT 02 to REGEXT 03</a></li>
 <li>A.10.   <a href="#rfc.appendix.A.10">Change from REGEXT 03 to REGEXT 04</a></li>
+<li>A.11.   <a href="#rfc.appendix.A.11">Change from REGEXT 04 to REGEXT 05</a></li>
 </ul><li><a href="#rfc.authors">Authors' Addresses</a></li>
 
 
   </ul>
 
   <h1 id="rfc.section.1"><a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">This document describes an extension mapping for version 1.0 of the <a href="#RFC5730">Extensible Provisioning Protocol (EPP)</a> <cite title="NONE">[RFC5730]</cite>.  This mapping, an extension to EPP object mappings like the <a href="#RFC5731">EPP domain name mapping</a> <cite title="NONE">[RFC5731]</cite>, is used to notify clients of operations they are not directly involved in, on objects that the client sponsors.  It is up to server policy to determine what transform operations and clients to notify.  Using this extension clients can more easily keep their systems in-sync with the objects stored in the server.  When a change occurs that a client needs to be notified of, a poll message can be inserted by the server for consumption by the client using the EPP &lt;poll&gt; command and response defined in <a href="#RFC5730">[RFC5730]</a>.  The extension supports including a "before" operation poll message and an "after" operation poll message.</p>
+<p id="rfc.section.1.p.1">This document describes an extension mapping for version 1.0 of the <a href="#RFC5730">Extensible Provisioning Protocol (EPP)</a> <cite title="NONE">[RFC5730]</cite>.  This mapping, an extension to EPP object mappings like the <a href="#RFC5731">EPP domain name mapping</a> <cite title="NONE">[RFC5731]</cite>, is used to notify clients of operations they are not directly involved in, on objects that the client sponsors.  It is up to server policy to determine what transform operations and clients to notify.  Using this extension, clients can more easily keep their systems in-sync with the objects stored in the server.  When a change occurs that a client needs to be notified of, a poll message can be inserted by the server for consumption by the client using the EPP &lt;poll&gt; command and response defined in <a href="#RFC5730">[RFC5730]</a>.  The extension supports including a "before" operation poll message and an "after" operation poll message.</p>
 <h1 id="rfc.section.1.1"><a href="#rfc.section.1.1">1.1.</a> Conventions Used in This Document</h1>
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <p id="rfc.section.1.1.p.2">XML is case sensitive. Unless stated otherwise, XML specifications and examples provided in this document MUST be interpreted in the character case presented in order to develop a conforming implementation.</p>
@@ -549,11 +553,11 @@
   <dt>"renew"</dt>
   <dd style="margin-left: 4">Renew operation as defined in <a href="#RFC5730">[RFC5730]</a>.</dd>
   <dt>"transfer"</dt>
-  <dd style="margin-left: 4">Transfer operation as defined in <a href="#RFC5730">[RFC5730]</a> with the OPTIONAL "op" attribute defining the transfer type with the possible values of "request", "approve", "cancel", and "reject".</dd>
+  <dd style="margin-left: 4">Transfer operation as defined in <a href="#RFC5730">[RFC5730]</a> that MUST set the "op" attribute with one of the possible transfer type values that include "request", "approve", "cancel", or "reject".</dd>
   <dt>"update"</dt>
   <dd style="margin-left: 4">Update operation as defined in <a href="#RFC5730">[RFC5730]</a>.</dd>
   <dt>"restore"</dt>
-  <dd style="margin-left: 4">Restore operation as defined in <a href="#RFC3915">[RFC3915]</a> with the OPTIONAL "op" attribute defining the restore type with the possible values of "request" and "report".</dd>
+  <dd style="margin-left: 4">Restore operation as defined in <a href="#RFC3915">[RFC3915]</a> that MUST set the "op" attribute with one of the possible restore type values that include "request" or "report".</dd>
   <dt>"autoRenew"</dt>
   <dd style="margin-left: 4">Auto renew operation executed by the server.</dd>
   <dt>"autoDelete"</dt>
@@ -561,10 +565,10 @@
   <dt>"autoPurge"</dt>
   <dd style="margin-left: 4">Auto purge operation executed by the server when removing the object after it had the "pendingDelete" status.</dd>
   <dt>"custom"</dt>
-  <dd style="margin-left: 4">Custom operation that uses the "op" attribute to define the custom operation name.</dd>
+  <dd style="margin-left: 4">Custom operation that MUST set the "op" attribute with the custom operation name.</dd>
 </dl>
 <h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#who" id="who">Who</a></h1>
-<p id="rfc.section.2.2.p.1">Who defines who executed the operation for audit purposes, and is represented using the &lt;changePoll:who&gt; element.  The scheme used for the possible set of Who values is up to server policy.  The server MAY identify Who based on: </p>
+<p id="rfc.section.2.2.p.1">The &lt;changePoll:who&gt; element defines who executed the operation for audit purposes.  The scheme used for the possible set of &lt;changePoll:who&gt; element values is up to server policy.  The server MAY identify the &lt;changePoll:who&gt; element value based on: </p>
 <p/>
 
 <dl>
@@ -575,6 +579,8 @@
   <dt>"Role"</dt>
   <dd style="margin-left: 4">Role of the user that executed operation.  An example is "CSR" for a Customer Support Representative or "Batch" for a server batch.</dd>
 </dl>
+<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#datestimes" id="datestimes">Dates and Times</a></h1>
+<p id="rfc.section.2.3.p.1">Date and time attribute values MUST be represented in Universal Coordinated Time (UTC) using the Gregorian calendar.  The extended date-time form using upper case "T" and "Z" characters defined in <a href="#W3C.REC-xmlschema-2-20041028">[W3C.REC-xmlschema-2-20041028]</a> MUST be used to represent date-time values, as XML Schema does not support truncated date-time forms or lower case "T" and "Z" characters.</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#commands" id="commands">EPP Command Mapping</a></h1>
 <p id="rfc.section.3.p.1">A detailed description of the EPP syntax and semantics can be found in the EPP core protocol specification <a href="#RFC5730">[RFC5730]</a>.</p>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#queryCommands" id="queryCommands">EPP Query Commands</a></h1>
@@ -583,7 +589,7 @@
 <p id="rfc.section.3.1.1.p.1">This extension does not add any elements to the EPP &lt;check&gt; command or &lt;check&gt; response described in the <a href="#RFC5730">[RFC5730]</a>.</p>
 <h1 id="rfc.section.3.1.2"><a href="#rfc.section.3.1.2">3.1.2.</a> <a href="#infoCommand" id="infoCommand">EPP &lt;info&gt; Command</a></h1>
 <p id="rfc.section.3.1.2.p.1">This extension does not add any elements to the EPP &lt;info&gt; command described in the <a href="#RFC5730">[RFC5730]</a>.</p>
-<p id="rfc.section.3.1.2.p.2">This extension adds transaction detail of the operations to the EPP &lt;info&gt; poll response, as described in <a href="#RFC5730">[RFC5730]</a>, of an EPP Object Mapping like <a href="#RFC5731">[RFC5731]</a>.  Any transform operation to an object defined in an EPP Object Mapping, by a client other than the sponsoring client, MAY result in extending the &lt;info&gt; response of the object for inserting an EPP poll message with the operation detail.  The sponsoring client will then receive the state of the object with operation detail like what, who, when, and why the object was changed.  The &lt;changePoll:changeData&gt; element contains the operation detail along with an indication of whether the object reflects the state before or after the operation, using the OPTIONAL "state" attribute, with the possible values of "before" or "after", and with a default value of "after".  The "state" attribute describes the state of the response data or &lt;resData&gt; block returned in the poll response.  The server MAY support providing the "before" state and "after" state to the operation, by using one poll message for the "before" state and one poll message for the "after" state.  When using the "before" state poll message, it MUST be inserted prior to the "after" state poll message.  The &lt;changePoll:changeData&gt; element includes the operation detail with the following child elements:</p>
+<p id="rfc.section.3.1.2.p.2">This extension adds operation detail of EPP object mapping operations <a href="#operation">Section 2.1</a> to an EPP poll response, as described in <a href="#RFC5730">[RFC5730]</a>, that is an extension of the EPP object mapping info response.  Any transform operation to an object defined in an EPP object mapping, by a client other than the sponsoring client, MAY result in extending the &lt;info&gt; response of the object for inserting an EPP poll message with the operation detail.  The sponsoring client will then receive the state of the object with operation detail like what, who, when, and why the object was changed.  The &lt;changePoll:changeData&gt; element contains the operation detail along with an indication of whether the object reflects the state before or after the operation, using the OPTIONAL "state" attribute, with the possible values of "before" or "after", and with a default value of "after".  The "state" attribute describes the state of the response data or &lt;resData&gt; block returned in the poll response.  The server MAY support providing the "before" state and "after" state to the operation, by using one poll message for the "before" state and one poll message for the "after" state.  When using the "before" state poll message, it MUST be inserted prior to the "after" state poll message.  The &lt;changePoll:changeData&gt; element includes the operation detail with the following child elements:</p>
 <p/>
 
 <dl>
@@ -1077,7 +1083,7 @@ END</pre>
 <p id="rfc.section.7.p.1">The mapping extensions described in this document do not provide any security services beyond those described by <a href="#RFC5730">EPP</a> <cite title="NONE">[RFC5730]</cite> and protocol layers used by EPP. The security considerations described in these other specifications apply to this specification as well.</p>
 <h1 id="rfc.section.8"><a href="#rfc.section.8">8.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
 <p id="rfc.section.8.p.1">The authors wish to acknowledge the original concept for this draft and the efforts in the initial versions of this draft by Trung Tran and Sharon Wodjenski.</p>
-<p id="rfc.section.8.p.2">Special suggestions that have been incorporated into this document were provided by Michael Holloway.</p>
+<p id="rfc.section.8.p.2">Special suggestions that have been incorporated into this document were provided by Michael Holloway and Patrick Mevzek.</p>
 <h1 id="rfc.references"><a href="#rfc.references">9.</a> Normative References</h1>
 <table>
   <tbody>
@@ -1122,6 +1128,12 @@ END</pre>
         <b id="RFC7451">[RFC7451]</b>
       </td>
       <td class="top"><a>Hollenbeck, S.</a>, "<a href="http://tools.ietf.org/html/rfc7451">Extension Registry for the Extensible Provisioning Protocol</a>", RFC 7451, DOI 10.17487/RFC7451, February 2015.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="W3C.REC-xmlschema-2-20041028">[W3C.REC-xmlschema-2-20041028]</b>
+      </td>
+      <td class="top"><a>Biron, P.</a> and <a>A. Malhotra</a>, "<a href="http://www.w3.org/TR/2004/REC-xmlschema-2-20041028">XML Schema Part 2: Datatypes Second Edition</a>", World Wide Web Consortium Recommendation REC-xmlschema-2-20041028, October 2004.</td>
     </tr>
   </tbody>
 </table>
@@ -1186,6 +1198,12 @@ END</pre>
 
 <ol>
   <li>Added Neustar implementation to the Implementation Status section.</li>
+</ol>
+<h1 id="rfc.appendix.A.11"><a href="#rfc.appendix.A.11">A.11.</a> <a href="#version-WG034to-WG05" id="version-WG034to-WG05">Change from REGEXT 04 to REGEXT 05</a></h1>
+<p/>
+
+<ol>
+  <li>Updates based on feedback from Patrick Mevzek, that include: <ol><li>Added a missing comma to "Using this extension, clients" in the Introduction section.</li><li>Modified the description of the "transfer", "restore", and "custom" operations to include "MUST set the "op" attribute" language.</li><li>Rephrased the first sentence of the Who section.</li><li>Added references to the &lt;changePoll:who&gt; element in the Who section.</li><li>Revise the sentence that describes how the extension extends the info response in the EPP &lt;info&gt; Command section.</li><li>Refer to EPP Object Mapping as EPP object mapping throughout the document.</li><li>Add a Dates and Times section to the Object Attributes section.</li></ol><p> </p></li>
 </ol>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Authors' Addresses</a>
