--- a/draft-ietf-regext-change-poll.html
+++ b/draft-ietf-regext-change-poll.html
@@ -378,8 +378,9 @@
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Conventions Used in This Document"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Object Attributes"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Operation"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Who"/>
-<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Dates and Times"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 State"/>
+<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Who"/>
+<link href="#rfc.section.2.4" rel="Chapter" title="2.4 Dates and Times"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 EPP Command Mapping"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 EPP Query Commands"/>
 <link href="#rfc.section.3.1.1" rel="Chapter" title="3.1.1 EPP &lt;check&gt; Command"/>
@@ -416,6 +417,7 @@
 <link href="#rfc.appendix.A.9" rel="Chapter" title="A.9 Change from REGEXT 02 to REGEXT 03"/>
 <link href="#rfc.appendix.A.10" rel="Chapter" title="A.10 Change from REGEXT 03 to REGEXT 04"/>
 <link href="#rfc.appendix.A.11" rel="Chapter" title="A.11 Change from REGEXT 04 to REGEXT 05"/>
+<link href="#rfc.appendix.A.12" rel="Chapter" title="A.12 Change from REGEXT 05 to REGEXT 06"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -423,8 +425,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Gould, J. and K. Feher" />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-05" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-1-2" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-06" />
+  <meta name="dct.issued" scheme="ISO8601" content="2018-1-4" />
   <meta name="dct.abstract" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client sponsored objects that were not initiated by the client through EPP. These operations MAY include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
   <meta name="description" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client sponsored objects that were not initiated by the client through EPP. These operations MAY include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
 
@@ -448,12 +450,12 @@
   <td class="right">K. Feher</td>
 </tr>
 <tr>
-  <td class="left">Expires: July 6, 2018</td>
+  <td class="left">Expires: July 8, 2018</td>
   <td class="right">Neustar</td>
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">January 2, 2018</td>
+  <td class="right">January 4, 2018</td>
 </tr>
 
     	
@@ -461,7 +463,7 @@
   </table>
 
   <p class="title">Change Poll Extension for the Extensible Provisioning Protocol (EPP)<br />
-  <span class="filename">draft-ietf-regext-change-poll-05</span></p>
+  <span class="filename">draft-ietf-regext-change-poll-06</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -473,7 +475,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on July 6, 2018.</p>
+<p>This Internet-Draft will expire on July 8, 2018.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -489,8 +491,9 @@
 <ul><li>1.1.   <a href="#rfc.section.1.1">Conventions Used in This Document</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Object Attributes</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Operation</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Who</a></li>
-<li>2.3.   <a href="#rfc.section.2.3">Dates and Times</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">State</a></li>
+<li>2.3.   <a href="#rfc.section.2.3">Who</a></li>
+<li>2.4.   <a href="#rfc.section.2.4">Dates and Times</a></li>
 </ul><li>3.   <a href="#rfc.section.3">EPP Command Mapping</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">EPP Query Commands</a></li>
 <ul><li>3.1.1.   <a href="#rfc.section.3.1.1">EPP &lt;check&gt; Command</a></li>
@@ -527,6 +530,7 @@
 <li>A.9.   <a href="#rfc.appendix.A.9">Change from REGEXT 02 to REGEXT 03</a></li>
 <li>A.10.   <a href="#rfc.appendix.A.10">Change from REGEXT 03 to REGEXT 04</a></li>
 <li>A.11.   <a href="#rfc.appendix.A.11">Change from REGEXT 04 to REGEXT 05</a></li>
+<li>A.12.   <a href="#rfc.appendix.A.12">Change from REGEXT 05 to REGEXT 06</a></li>
 </ul><li><a href="#rfc.authors">Authors' Addresses</a></li>
 
 
@@ -546,41 +550,45 @@
 <p/>
 
 <dl>
-  <dt>"create"</dt>
+  <dt>"create":</dt>
   <dd style="margin-left: 4">Create operation as defined in <a href="#RFC5730">[RFC5730]</a>.</dd>
-  <dt>"delete"</dt>
+  <dt>"delete":</dt>
   <dd style="margin-left: 4">Delete operation as defined in <a href="#RFC5730">[RFC5730]</a>.  If the delete operation results in an immediate purge of the object, then the "op" attribute MUST be set to "purge".</dd>
-  <dt>"renew"</dt>
+  <dt>"renew":</dt>
   <dd style="margin-left: 4">Renew operation as defined in <a href="#RFC5730">[RFC5730]</a>.</dd>
-  <dt>"transfer"</dt>
+  <dt>"transfer":</dt>
   <dd style="margin-left: 4">Transfer operation as defined in <a href="#RFC5730">[RFC5730]</a> that MUST set the "op" attribute with one of the possible transfer type values that include "request", "approve", "cancel", or "reject".</dd>
-  <dt>"update"</dt>
+  <dt>"update":</dt>
   <dd style="margin-left: 4">Update operation as defined in <a href="#RFC5730">[RFC5730]</a>.</dd>
-  <dt>"restore"</dt>
+  <dt>"restore":</dt>
   <dd style="margin-left: 4">Restore operation as defined in <a href="#RFC3915">[RFC3915]</a> that MUST set the "op" attribute with one of the possible restore type values that include "request" or "report".</dd>
-  <dt>"autoRenew"</dt>
+  <dt>"autoRenew":</dt>
   <dd style="margin-left: 4">Auto renew operation executed by the server.</dd>
-  <dt>"autoDelete"</dt>
+  <dt>"autoDelete":</dt>
   <dd style="margin-left: 4">Auto delete operation executed by the server.  If the "autoDelete" operation results in an immediate purge of the object, then the "op" attribute MUST be set to "purge".</dd>
-  <dt>"autoPurge"</dt>
+  <dt>"autoPurge":</dt>
   <dd style="margin-left: 4">Auto purge operation executed by the server when removing the object after it had the "pendingDelete" status.</dd>
-  <dt>"custom"</dt>
+  <dt>"custom":</dt>
   <dd style="margin-left: 4">Custom operation that MUST set the "op" attribute with the custom operation name.</dd>
 </dl>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#who" id="who">Who</a></h1>
-<p id="rfc.section.2.2.p.1">The &lt;changePoll:who&gt; element defines who executed the operation for audit purposes.  The scheme used for the possible set of &lt;changePoll:who&gt; element values is up to server policy.  The server MAY identify the &lt;changePoll:who&gt; element value based on: </p>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#state" id="state">State</a></h1>
+<p id="rfc.section.2.2.p.1">The state attribute reflects the state of the object "before" or "after" the operation.  The state is defined using the OPTIONAL "state" attribute of the &lt;changePoll:changeData&gt; element, with the possible values "before" or "after" and with a default value of "after".  The server MAY support both the "before" state and the "after" state of the operation, by using one poll message for the "before" state and one poll message for the "after" state.  The "before" state poll message MUST be inserted prior to the "after" state poll message.</p>
+<p id="rfc.section.2.2.p.2">For operations in <a href="#operation">Section 2.1</a> that don't have an "after" state, the server MUST use the "before" state poll message.  For example, for the "delete" operation with the "op" attribute set to "purge", or the "autoPurge" operation, the server includes the state of the object prior to being purged in the "before" state poll message.</p>
+<p id="rfc.section.2.2.p.3">For operations in <a href="#operation">Section 2.1</a> that don't have a "before" state, the server MUST use the "after" state poll message.  For example, for the "create" operation, the server includes the state of the object after creation in the "after" state poll message.</p>
+<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#who" id="who">Who</a></h1>
+<p id="rfc.section.2.3.p.1">The &lt;changePoll:who&gt; element defines who executed the operation for audit purposes.  The scheme used for the possible set of &lt;changePoll:who&gt; element values is up to server policy.  The server MAY identify the &lt;changePoll:who&gt; element value based on: </p>
 <p/>
 
 <dl>
-  <dt>"Identifier"</dt>
+  <dt>"Identifier":</dt>
   <dd style="margin-left: 4">Unique user identifier of the user that executed the operation.  An example is "ClientX".</dd>
-  <dt>"Name"</dt>
+  <dt>"Name":</dt>
   <dd style="margin-left: 4">Name of the user that executed the operation.  An example is "John Doe".</dd>
-  <dt>"Role"</dt>
+  <dt>"Role":</dt>
   <dd style="margin-left: 4">Role of the user that executed operation.  An example is "CSR" for a Customer Support Representative or "Batch" for a server batch.</dd>
 </dl>
-<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#datestimes" id="datestimes">Dates and Times</a></h1>
-<p id="rfc.section.2.3.p.1">Date and time attribute values MUST be represented in Universal Coordinated Time (UTC) using the Gregorian calendar.  The extended date-time form using upper case "T" and "Z" characters defined in <a href="#W3C.REC-xmlschema-2-20041028">[W3C.REC-xmlschema-2-20041028]</a> MUST be used to represent date-time values, as XML Schema does not support truncated date-time forms or lower case "T" and "Z" characters.</p>
+<h1 id="rfc.section.2.4"><a href="#rfc.section.2.4">2.4.</a> <a href="#datestimes" id="datestimes">Dates and Times</a></h1>
+<p id="rfc.section.2.4.p.1">Date and time attribute values MUST be represented in Universal Coordinated Time (UTC) using the Gregorian calendar.  The extended date-time form using upper case "T" and "Z" characters defined in <a href="#W3C.REC-xmlschema-2-20041028">[W3C.REC-xmlschema-2-20041028]</a> MUST be used to represent date-time values, as XML Schema does not support truncated date-time forms or lower case "T" and "Z" characters.</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#commands" id="commands">EPP Command Mapping</a></h1>
 <p id="rfc.section.3.p.1">A detailed description of the EPP syntax and semantics can be found in the EPP core protocol specification <a href="#RFC5730">[RFC5730]</a>.</p>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#queryCommands" id="queryCommands">EPP Query Commands</a></h1>
@@ -589,32 +597,32 @@
 <p id="rfc.section.3.1.1.p.1">This extension does not add any elements to the EPP &lt;check&gt; command or &lt;check&gt; response described in the <a href="#RFC5730">[RFC5730]</a>.</p>
 <h1 id="rfc.section.3.1.2"><a href="#rfc.section.3.1.2">3.1.2.</a> <a href="#infoCommand" id="infoCommand">EPP &lt;info&gt; Command</a></h1>
 <p id="rfc.section.3.1.2.p.1">This extension does not add any elements to the EPP &lt;info&gt; command described in the <a href="#RFC5730">[RFC5730]</a>.</p>
-<p id="rfc.section.3.1.2.p.2">This extension adds operation detail of EPP object mapping operations <a href="#operation">Section 2.1</a> to an EPP poll response, as described in <a href="#RFC5730">[RFC5730]</a>, that is an extension of the EPP object mapping info response.  Any transform operation to an object defined in an EPP object mapping, by a client other than the sponsoring client, MAY result in extending the &lt;info&gt; response of the object for inserting an EPP poll message with the operation detail.  The sponsoring client will then receive the state of the object with operation detail like what, who, when, and why the object was changed.  The &lt;changePoll:changeData&gt; element contains the operation detail along with an indication of whether the object reflects the state before or after the operation, using the OPTIONAL "state" attribute, with the possible values of "before" or "after", and with a default value of "after".  The "state" attribute describes the state of the response data or &lt;resData&gt; block returned in the poll response.  The server MAY support providing the "before" state and "after" state to the operation, by using one poll message for the "before" state and one poll message for the "after" state.  When using the "before" state poll message, it MUST be inserted prior to the "after" state poll message.  The &lt;changePoll:changeData&gt; element includes the operation detail with the following child elements:</p>
+<p id="rfc.section.3.1.2.p.2">This extension adds operation detail of EPP object mapping operations <a href="#operation">Section 2.1</a> to an EPP poll response, as described in <a href="#RFC5730">[RFC5730]</a>, that is an extension of the EPP object mapping info response.  Any transform operation to an object defined in an EPP object mapping, by a client other than the sponsoring client, MAY result in extending the &lt;info&gt; response of the object for inserting an EPP poll message with the operation detail.  The sponsoring client will then receive the state of the object with operation detail like what, who, when, and why the object was changed.  The &lt;changePoll:changeData&gt; element contains the operation detail along with an indication of whether the object reflects the state before or after the operation as defined in <a href="#state">Section 2.2</a>.  The &lt;changePoll:changeData&gt; element includes the operation detail with the following child elements:</p>
 <p/>
 
 <dl>
-  <dt>&lt;changePoll:operation&gt;</dt>
+  <dt>&lt;changePoll:operation&gt;:</dt>
   <dd style="margin-left: 4">Transform operation executed on the object as defined in <a href="#operation">Section 2.1</a>.</dd>
-  <dt>&lt;changePoll:date&gt;</dt>
+  <dt>&lt;changePoll:date&gt;:</dt>
   <dd style="margin-left: 4">Date and time when the operation was executed.</dd>
-  <dt>&lt;changePoll:svTRID&gt;</dt>
+  <dt>&lt;changePoll:svTRID&gt;:</dt>
   <dd style="margin-left: 4">Server transaction identifier of the operation.</dd>
-  <dt>&lt;changePoll:who&gt;</dt>
-  <dd style="margin-left: 4">Who executed the operation as defined in <a href="#who">Section 2.2</a>.</dd>
-  <dt>&lt;changePoll:caseId&gt;</dt>
+  <dt>&lt;changePoll:who&gt;:</dt>
+  <dd style="margin-left: 4">Who executed the operation as defined in <a href="#who">Section 2.3</a>.</dd>
+  <dt>&lt;changePoll:caseId&gt;:</dt>
   <dd style="margin-left: 4">OPTIONAL case identifer associated with the operation.  The required "type" attribute defines the type of case with an enumerated list of case types including:</dd>
   <dt></dt>
   <dd style="margin-left: 4">
     <dl>
-      <dt>udrp</dt>
+      <dt>udrp:</dt>
       <dd style="margin-left: 4">a Uniform Domain-Name Dispute-Resolution Policy (UDRP) case.</dd>
-      <dt>urs</dt>
+      <dt>urs:</dt>
       <dd style="margin-left: 4">a Uniform Rapid Suspension (URS) case.</dd>
-      <dt>custom</dt>
+      <dt>custom:</dt>
       <dd style="margin-left: 4">A custom case that is defined using the "name" attribute.</dd>
     </dl>
   </dd>
-  <dt>&lt;changePoll:reason&gt;</dt>
+  <dt>&lt;changePoll:reason&gt;:</dt>
   <dd style="margin-left: 4">OPTIONAL reason for executing the operation.  If present, this element contains the server-specific text to help explain the reason the operation was executed.  This text MUST be represented in the response language previously negotiated with the client; an OPTIONAL "lang" attribute MAY be present to identify the language if the negotiated value is something other than the default value of "en" (English).</dd>
 </dl>
 <p>Example poll &lt;info&gt; response with the &lt;changePoll:changeData&gt; extension for a URS lock transaction on the domain.example domain name, with the "before" state.  The "before" state is reflected in the &lt;resData&gt; block:</p>
@@ -1199,11 +1207,18 @@ END</pre>
 <ol>
   <li>Added Neustar implementation to the Implementation Status section.</li>
 </ol>
-<h1 id="rfc.appendix.A.11"><a href="#rfc.appendix.A.11">A.11.</a> <a href="#version-WG034to-WG05" id="version-WG034to-WG05">Change from REGEXT 04 to REGEXT 05</a></h1>
+<h1 id="rfc.appendix.A.11"><a href="#rfc.appendix.A.11">A.11.</a> <a href="#version-WG04-to-WG05" id="version-WG04-to-WG05">Change from REGEXT 04 to REGEXT 05</a></h1>
 <p/>
 
 <ol>
   <li>Updates based on feedback from Patrick Mevzek, that include: <ol><li>Added a missing comma to "Using this extension, clients" in the Introduction section.</li><li>Modified the description of the "transfer", "restore", and "custom" operations to include "MUST set the "op" attribute" language.</li><li>Rephrased the first sentence of the Who section.</li><li>Added references to the &lt;changePoll:who&gt; element in the Who section.</li><li>Revise the sentence that describes how the extension extends the info response in the EPP &lt;info&gt; Command section.</li><li>Refer to EPP Object Mapping as EPP object mapping throughout the document.</li><li>Add a Dates and Times section to the Object Attributes section.</li></ol><p> </p></li>
+</ol>
+<h1 id="rfc.appendix.A.12"><a href="#rfc.appendix.A.12">A.12.</a> <a href="#version-WG05-to-WG06" id="version-WG05-to-WG06">Change from REGEXT 05 to REGEXT 06</a></h1>
+<p/>
+
+<ol>
+  <li>Added the "State" sub-section to the "Object Attributes" section to describe the expected behavior for the "before" and "after" states, based on feedback from Patrick Mevzek.</li>
+  <li>Added a colon suffix to each hangText entry to provide better separation.</li>
 </ol>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Authors' Addresses</a>
